cmake_minimum_required( VERSION 3.7 )
add_definitions( -std=c++17 )
project( ObjectDetector )
find_package( OpenCV REQUIRED NO_MODULE PATHS /usr/local/lib/cmake/opencv4 NO_DEFAULT_PATH)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( ObjectDetector src/main.cpp src/YoloV3.cpp src/YoloV3.h)
target_link_libraries( ObjectDetector ${OpenCV_LIBS} )